# YEngine

./: .gitignore  CMakeLists.txt  YEnginge.drawio  build.bat
sharpmake/sharpmakeScripts/: main.sharpmake.cs
source/: CMakeLists.txt
source/YEngine_Gfx/: Buffers.cpp  Buffers.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  GraphicsModule.cpp  GraphicsModule.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImGui.cpp  ImGui.h  Model.cpp  Model.h  RenderPass.cpp  RenderPass.h  Surface.cpp  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  VulkanInstance.cpp  common.h  gfx_common.h
source/YEngine_System/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h
source/YEngine_System/math/: common.h  math.cpp  trigonometry.cpp  trigonometry.h
source/YEngine_System/system/: Filepath.cpp  Filepath.h  Filesystem.cpp  Filesystem.h  IOManager.cpp  IOManager.h  Logger.h
source/sandbox/: Buffers.cpp  Buffers.h  CMakeLists.txt  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  EntryPoint.cpp  Framebuffer.cpp  Framebuffer.h  Geometry.cpp  Geometry.h  GraphicsPipeline.cpp  GraphicsPipeline.h  HelloTriangleApp.cpp  HelloTriangleApp.h  ImGui.cpp  ImGui.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Queue.h  RenderPass.cpp  RenderPass.h  ShadowPass.cpp  ShadowPass.h  Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h  Vector.h  VulkanInstance.cpp  VulkanInstance.h  (+3 more)
source/sandbox/graphics/: Buffers.cpp  Buffers.h  Device.cpp  (+19 more)
(+7 files in other folders)
